Minor changes initial

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <!-- ==============================
-    Project:        Metronic "the binary studio" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
+    Project:        "the binary studio"
     Version:        1.0
-    Author:         KeenThemes
-    Primary use:    Corporate, Business Themes.
-    Email:          support@keenthemes.com
+    Author:         Anand Gupta
+    Primary use:    Corporate.
+    Email:          prashant@thebinarystudio.com
     Follow:         http://www.twitter.com/keenthemes
     Like:           http://www.facebook.com/keenthemes
     Website:        http://www.keenthemes.com
-    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
 ================================== -->
 <html lang="en" class="no-js">
 <!-- BEGIN HEAD -->
@@ -31,7 +30,7 @@
     <link href="vendor/swiper/css/swiper.min.css" rel="stylesheet" type="text/css" />
 
     <!-- THEME STYLES -->
-    <link href="css/layout.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/layout.css" rel="stylesheet" type="text/css" />
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" />
@@ -101,7 +100,7 @@
                 <div class="container">
                     <div class="carousel-centered">
                         <div class="margin-b-40">
-                            <h1 class="carousel-title">Hi-Tech Design</h1>
+                            <h1 class="carousel-title">the binary studio</h1>
                             <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br /> enim minim
                                 estudiat veniam siad venumus dolore</p>
                         </div>
@@ -114,7 +113,7 @@
                 <div class="container">
                     <div class="carousel-centered">
                         <div class="margin-b-40">
-                            <h2 class="carousel-title">Hi-Tech Design</h2>
+                            <h2 class="carousel-title">the binary studio</h2>
                             <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br /> enim minim
                                 estudiat veniam siad venumus dolore</p>
                         </div>
@@ -632,7 +631,7 @@
     <script src="vendor/masonry/imagesloaded.pkgd.min.js" type="text/javascript"></script>
 
     <!-- PAGE LEVEL SCRIPTS -->
-    <script src="js/layout.min.js" type="text/javascript"></script>
+    <script src="js/layout.js" type="text/javascript"></script>
     <script src="js/components/wow.min.js" type="text/javascript"></script>
     <script src="js/components/swiper.min.js" type="text/javascript"></script>
     <script src="js/components/masonry.min.js" type="text/javascript"></script>
