--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <link href="vendor/swiper/css/swiper.min.css" rel="stylesheet" type="text/css" />
 
     <!-- THEME STYLES -->
-    <link href="css/layout.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/layout.css" rel="stylesheet" type="text/css" />
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" />
@@ -454,7 +454,7 @@
     <script src="vendor/swiper/js/swiper.jquery.min.js" type="text/javascript"></script>
 
     <!-- PAGE LEVEL SCRIPTS -->
-    <script src="js/layout.min.js" type="text/javascript"></script>
+    <script src="js/layout.js" type="text/javascript"></script>
     <script src="js/components/swiper.min.js" type="text/javascript"></script>
     <script src="js/components/wow.min.js" type="text/javascript"></script>
 
