Added logo and refactor text

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                     <div class="menu-container">
                         <ul class="navbar-nav navbar-nav-right">
                             <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="index.html">Home</a></li>
-                            <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">Pricing</a></li> -->
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
-                            <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Products</a></li> -->
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">Services</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="Projects.html">Projects</a></li>
                             <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li> -->
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">Contact</a></li>
                         </ul>
@@ -137,7 +137,7 @@
                                 <i class="service-icon icon-chemistry"></i>
                             </div>
                             <div class="service-info">
-                                <h3>Art Of Coding</h3>
+                                <h3>Architectural Design</h3>
                                 <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat
                                     dolor</p>
                             </div>
@@ -152,7 +152,7 @@
                                 <i class="service-icon icon-screen-tablet"></i>
                             </div>
                             <div class="service-info">
-                                <h3>Responsive Design</h3>
+                                <h3>Construction Administration</h3>
                                 <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat
                                     dolor</p>
                             </div>
@@ -167,7 +167,7 @@
                                 <i class="service-icon icon-badge"></i>
                             </div>
                             <div class="service-info">
-                                <h3>Feature Reach</h3>
+                                <h3>Interior Design</h3>
                                 <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat
                                     dolor</p>
                             </div>
@@ -186,7 +186,7 @@
                                 <i class="service-icon icon-notebook"></i>
                             </div>
                             <div class="service-info">
-                                <h3>Useful Documentation</h3>
+                                <h3>Sustainable Design</h3>
                                 <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat
                                     dolor</p>
                             </div>
@@ -201,7 +201,7 @@
                                 <i class="service-icon icon-speedometer"></i>
                             </div>
                             <div class="service-info">
-                                <h3>Fast Delivery</h3>
+                                <h3>Furniture Design</h3>
                                 <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat
                                     dolor</p>
                             </div>
@@ -216,7 +216,7 @@
                                 <i class="service-icon icon-badge"></i>
                             </div>
                             <div class="service-info">
-                                <h3>Free Plugins</h3>
+                                <h3>Commercial Visual Merchandising</h3>
                                 <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat
                                     dolor</p>
                             </div>
@@ -230,11 +230,11 @@
     </div>
     <!-- End Service -->
 
-    <!-- Latest Products -->
+    <!-- Projects -->
     <div class="content-lg container">
         <div class="row margin-b-40">
             <div class="col-sm-6">
-                <h2>Latest Products</h2>
+                <h2>Projects</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna
                     aliqua enim minim veniam exercitation</p>
             </div>
@@ -242,11 +242,11 @@
         <!--// end row -->
 
         <div class="row">
-            <!-- Latest Products -->
+            <!-- Projects -->
             <div class="col-sm-4 sm-margin-b-50">
                 <div class="margin-b-20">
                     <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                        <img class="img-responsive" src="img/970x647/01.jpg" alt="Latest Products Image">
+                        <img class="img-responsive" src="img/970x647/01.jpg" alt="Projects Image">
                     </div>
                 </div>
                 <h4><a href="#">Triangle Roof</a> <span class="text-uppercase margin-l-20">Management</span></h4>
@@ -254,13 +254,13 @@
                     ut consequat siad esqudiat dolor</p>
                 <a class="link" href="#">Read More</a>
             </div>
-            <!-- End Latest Products -->
+            <!-- End Projects -->
 
-            <!-- Latest Products -->
+            <!-- Projects -->
             <div class="col-sm-4 sm-margin-b-50">
                 <div class="margin-b-20">
                     <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                        <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
+                        <img class="img-responsive" src="img/970x647/02.jpg" alt="Projects Image">
                     </div>
                 </div>
                 <h4><a href="#">Curved Corners</a> <span class="text-uppercase margin-l-20">Developmeny</span></h4>
@@ -268,13 +268,13 @@
                     ut consequat siad esqudiat dolor</p>
                 <a class="link" href="#">Read More</a>
             </div>
-            <!-- End Latest Products -->
+            <!-- End Projects -->
 
-            <!-- Latest Products -->
+            <!-- Projects -->
             <div class="col-sm-4 sm-margin-b-50">
                 <div class="margin-b-20">
                     <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                        <img class="img-responsive" src="img/970x647/03.jpg" alt="Latest Products Image">
+                        <img class="img-responsive" src="img/970x647/03.jpg" alt="Projects Image">
                     </div>
                 </div>
                 <h4><a href="#">Bird On Green</a> <span class="text-uppercase margin-l-20">Design</span></h4>
@@ -282,11 +282,11 @@
                     ut consequat siad esqudiat dolor</p>
                 <a class="link" href="#">Read More</a>
             </div>
-            <!-- End Latest Products -->
+            <!-- End Projects -->
         </div>
         <!--// end row -->
     </div>
-    <!-- End Latest Products -->
+    <!-- End Projects -->
 
     <!-- Clients -->
     <div class="bg-color-sky-light">
@@ -386,7 +386,7 @@
                         </div>
                         <ul class="list-unstyled pricing-list margin-b-50">
                             <li class="pricing-list-item">Basic Features</li>
-                            <li class="pricing-list-item">Up to 5 products</li>
+                            <li class="pricing-list-item">Up to 5 Projects</li>
                             <li class="pricing-list-item">50 Users Panels</li>
                         </ul>
                         <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
@@ -403,7 +403,7 @@
                         </div>
                         <ul class="list-unstyled pricing-list margin-b-50">
                             <li class="pricing-list-item">Basic Features</li>
-                            <li class="pricing-list-item">Up to 100 products</li>
+                            <li class="pricing-list-item">Up to 100 Projects</li>
                             <li class="pricing-list-item">100 Users Panels</li>
                         </ul>
                         <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
@@ -420,7 +420,7 @@
                         </div>
                         <ul class="list-unstyled pricing-list margin-b-50">
                             <li class="pricing-list-item">Extended Features</li>
-                            <li class="pricing-list-item">Unlimited products</li>
+                            <li class="pricing-list-item">Unlimited Projects</li>
                             <li class="pricing-list-item">Unlimited Users Panels</li>
                         </ul>
                         <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
@@ -562,7 +562,7 @@
                         <ul class="list-unstyled footer-list">
                             <li class="footer-list-item"><a class="footer-list-link" href="#">Home</a></li>
                             <li class="footer-list-item"><a class="footer-list-link" href="#">About</a></li>
-                            <li class="footer-list-item"><a class="footer-list-link" href="#">Products</a></li>
+                            <li class="footer-list-item"><a class="footer-list-link" href="#">Projects</a></li>
                             <li class="footer-list-item"><a class="footer-list-link" href="#">Pricing</a></li>
                             <li class="footer-list-item"><a class="footer-list-link" href="#">Clients</a></li>
                             <li class="footer-list-item"><a class="footer-list-link" href="#">Careers</a></li>
