--- a/contact.html
+++ b/contact.html
@@ -67,12 +67,12 @@
                 <div class="collapse navbar-collapse nav-collapse">
                     <div class="menu-container">
                         <ul class="navbar-nav navbar-nav-right">
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">Home</a></li>
-                            <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">Pricing</a></li> -->
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
-                            <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Products</a></li> -->
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">Services</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Projects</a></li>
                             <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li> -->
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
