About me 70 percent done

--- a/faq.html
+++ b/faq.html
@@ -67,7 +67,7 @@
                             <ul class="navbar-nav navbar-nav-right">
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">Services</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="services.html">Services</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Projects</a></li>
                                 <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li> -->
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">Contact</a></li>
@@ -205,7 +205,7 @@
                                     <li class="pricing-list-item">Up to 5 products</li>
                                     <li class="pricing-list-item">50 Users Panels</li>
                                 </ul>
-                                <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
+                                <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
                             </div>
                             <!-- End Pricing -->
                         </div>
@@ -224,7 +224,7 @@
                                     <li class="pricing-list-item">Up to 100 products</li>
                                     <li class="pricing-list-item">100 Users Panels</li>
                                 </ul>
-                                <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
+                                <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
                             </div>
                             <!-- End Pricing -->
                         </div>
@@ -243,7 +243,7 @@
                                     <li class="pricing-list-item">Unlimited products</li>
                                     <li class="pricing-list-item">Unlimited Users Panels</li>
                                 </ul>
-                                <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
+                                <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
                             </div>
                             <!-- End Pricing -->
                         </div>
