--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                         <ul class="navbar-nav navbar-nav-right">
                             <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">Services</a></li>
+                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href="services.html">Services</a></li>
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Projects</a></li>
                             <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li> -->
                             <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">Contact</a></li>
@@ -307,57 +307,6 @@
     </div>
     <!-- End Service -->
 
-    <!-- Testimonials -->
-    <div class="content-lg container">
-        <div class="row">
-            <div class="col-sm-9">
-                <h2>Notes From CEO</h2>
-
-                <!-- Swiper Testimonials -->
-                <div class="swiper-slider swiper-testimonials">
-                    <!-- Swiper Wrapper -->
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <blockquote class="blockquote">
-                                <div class="margin-b-20">
-                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut
-                                    laboret dolore magna aliqua. Ut enim minim veniam exercitation laboris ut siad
-                                    consequat siad minim enum esqudiat dolore.
-                                </div>
-                                <div class="margin-b-20">
-                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut
-                                    laboret tempor incididunt dolore magna consequat siad minim aliqua.
-                                </div>
-                                <p><span class="fweight-700 color-link">Joh Milner</span>, Metronic Customer</p>
-                            </blockquote>
-                        </div>
-                        <div class="swiper-slide">
-                            <blockquote class="blockquote">
-                                <div class="margin-b-20">
-                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                                    culpa qui officia deserunt mollit anim id est laborum.
-                                </div>
-                                <div class="margin-b-20">
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                    ex ea commodo consequat.
-                                </div>
-                                <p><span class="fweight-700 color-link">Alex Clarson</span>, Metronic Customer</p>
-                            </blockquote>
-                        </div>
-                    </div>
-                    <!-- End Swiper Wrapper -->
-
-                    <!-- Pagination -->
-                    <div class="swiper-testimonials-pagination"></div>
-                </div>
-                <!-- End Swiper Testimonials -->
-            </div>
-        </div>
-        <!--// end row -->
-    </div>
-    <!-- End Testimonials -->
-
     <!-- Team -->
     <div class="bg-color-sky-light">
         <div class="content-lg container">
@@ -375,13 +324,16 @@
                 <div class="col-sm-4 sm-margin-b-50">
                     <div class="bg-color-white margin-b-20">
                         <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                            <img class="img-responsive" src="img/770x860/01.jpg" alt="Team Image">
+                            <img class="img-responsive" style="height: 403px;" src="img/770x860/01.jpg" alt="Team Image">
                         </div>
                     </div>
-                    <h4><a href="#">Alicia Keys</a> <span class="text-uppercase margin-l-20">Project Manager</span></h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
-                        magna ut consequat siad esqudiat dolor</p>
-                    <a class="link" href="#">Read More</a>
+                    <h4><a href="#">Prashant Pandey</a> <span class="text-uppercase margin-l-20">Architect</span></h4>
+                    <p>
+
+                        He holds a Bachelor of Architecture from the Faculty of Architecture & Ekistics, Jamia Millia
+                        Islamia, New Delhi, is a licensed architect with the Council of Architecture India.
+
+                    </p>
                 </div>
                 <!-- End Team -->
 
@@ -395,7 +347,7 @@
                     <h4><a href="#">James Millner</a> <span class="text-uppercase margin-l-20">Lead Developer</span></h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
                         magna ut consequat siad esqudiat dolor</p>
-                    <a class="link" href="#">Read More</a>
+                    <!-- <a class="link" href="#">Read More</a> -->
                 </div>
                 <!-- End Team -->
 
@@ -409,7 +361,7 @@
                     <h4><a href="#">Scarlet Johanson</a> <span class="text-uppercase margin-l-20">Designer</span></h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
                         magna ut consequat siad esqudiat dolor</p>
-                    <a class="link" href="#">Read More</a>
+                    <!-- <a class="link" href="#">Read More</a> -->
                 </div>
                 <!-- End Team -->
             </div>
