--- a/products.html
+++ b/products.html
@@ -68,7 +68,7 @@
                             <ul class="navbar-nav navbar-nav-right">
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">Services</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="services.html">Services</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Projects</a></li>
                                 <!-- <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li> -->
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">Contact</a></li>
