Added logo and icons

--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
                         <div class="service" data-height="height">
                             <div class="service-element">
-                                <i class="service-icon icon-chemistry"></i>
+                                <img src="./img//icons/Icon-Architecture.png" class="service-icon adjust"></img>
                             </div>
                             <div class="service-info">
                                 <h3>Architectural Design</h3>
@@ -206,7 +206,7 @@
                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
                         <div class="service" data-height="height">
                             <div class="service-element">
-                                <i class="service-icon icon-screen-tablet"></i>
+                                <img src="./img/icons/Icon-Construction.png" class="service-icon adjust"></img>
                             </div>
                             <div class="service-info">
                                 <h3>Construction Administration</h3>
@@ -225,7 +225,7 @@
                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
                         <div class="service" data-height="height">
                             <div class="service-element">
-                                <i class="service-icon icon-badge"></i>
+                                <img src="./img/icons/Icon-Interior.png" class="service-icon adjust"></img>
                             </div>
                             <div class="service-info">
                                 <h3>Interior Design</h3>
@@ -247,7 +247,7 @@
                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
                         <div class="service" data-height="height">
                             <div class="service-element">
-                                <i class="service-icon icon-notebook"></i>
+                                <img src="./img/icons/Icon-Sustainable.png" class="service-icon adjust"></img src="./img/icons/Icon-Sustainable.png">
                             </div>
                             <div class="service-info">
                                 <h3>Sustainable Design</h3>
@@ -268,7 +268,7 @@
                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
                         <div class="service" data-height="height">
                             <div class="service-element">
-                                <i class="service-icon icon-speedometer"></i>
+                                <img src="./img/icons/Icon-furniture.png" class="service-icon adjust"></img>
                             </div>
                             <div class="service-info">
                                 <h3>Furniture Design</h3>
